fix: truncate title to 20 char in item page nav

--- a/src/frontend/item-page/index.module.css
+++ b/src/frontend/item-page/index.module.css
@@ -26,7 +26,7 @@
   background-color: white;
 }
 
-.hello {
+.leftContainer {
   display: flex;
   justify-content: space-between;
 }
